syntax = "proto3";
package rusk;

import "echo.proto";
import "network.proto";
import "prover.proto";
import "provisioner.proto";
import "transaction.proto";

message PreverifyRequest {
    Transaction tx = 1;
}

message PreverifyResponse {
    bytes tx_hash = 1;
    Fee fee = 2;
}

message StateTransitionRequest {
    repeated Transaction txs = 1;
    fixed64 block_gas_limit = 2;
    fixed64 block_height = 3;
    bytes state_root = 4;
}

message StateTransitionResponse {
    repeated Transaction txs = 1;
    bytes state_root = 2; // NOTE: this might require a failure mode
}

message ExecuteStateTransitionRequest {
    repeated Transaction txs = 1;
    fixed64 block_gas_limit = 2;
    fixed64 block_height = 3;
}

message ExecuteStateTransitionResponse {
    bool success = 1;
    repeated Transaction txs = 2;
    bytes state_root = 3;
}

message VerifyStateTransitionRequest {
    repeated Transaction txs = 1;
    fixed64 block_gas_limit = 2;
    fixed64 block_height = 3;
}

message VerifyStateTransitionResponse {
    bool success = 1;
}

message GetProvisionersRequest {}

message GetProvisionersResponse {
    repeated Provisioner provisioners = 1;
}

message GetStateRootRequest {}

message GetStateRootResponse {
    bytes state_root = 1;
}

message GetNotesOwnedByRequest {
    uint64 height = 1;
    bytes vk = 2;
}

message GetNotesOwnedByResponse {
    repeated bytes notes = 1;
}

message GetAnchorRequest {}

message GetAnchorResponse {
    bytes anchor = 1; // BlsScalar
}

message GetOpeningRequest {
    bytes note = 1;
}

message GetOpeningResponse {
    bytes branch = 1; // PoseidonBranch<POSEIDON_TREE_DEPTH>
}

message GetStakeRequest {
    bytes pk = 1; // PublicKey
}

message GetStakeResponse {
    fixed64 stake = 1;
    fixed64 expiration = 2;
}

service State {
    rpc Echo(EchoRequest) returns (EchoResponse) {}
    rpc Preverify(PreverifyRequest) returns (PreverifyResponse) {}
    rpc ExecuteStateTransition(ExecuteStateTransitionRequest) returns (ExecuteStateTransitionResponse) {}
    rpc VerifyStateTransition(VerifyStateTransitionRequest) returns (VerifyStateTransitionResponse) {}
    rpc Accept(StateTransitionRequest) returns (StateTransitionResponse) {}
    rpc Finalize(StateTransitionRequest) returns (StateTransitionResponse) {}
    rpc GetProvisioners(GetProvisionersRequest) returns (GetProvisionersResponse) {}
    rpc GetStateRoot(GetStateRootRequest) returns (GetStateRootResponse) {}
    rpc GetNotesOwnedBy(GetNotesOwnedByRequest) returns (GetNotesOwnedByResponse) {}
    rpc GetAnchor(GetAnchorRequest) returns (GetAnchorResponse) {}
    rpc GetOpening(GetOpeningRequest) returns (GetOpeningResponse) {}
    rpc GetStake(GetStakeRequest) returns (GetStakeResponse) {}
}
